# rust-base16

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
benches/: bench.rs  decode.rs  encode.rs
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: bench.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode.rs  encode.rs  roundtrip_l.rs  roundtrip_u.rs
fuzz/in/: example0  example1  example2
src/: lib.rs
tests/: doctest_copies.rs  tests.rs
