[package]
name = "base16"
version = "0.1.1"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
keywords = ["hex", "hexadecimal", "base16", "encode", "decode"]
repository = "https://github.com/thomcc/rust-base16"
description = "base16 (hex) encoding and decoding"
categories = ["encoding"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
std = []
default = ["std"]

[dependencies]

[dev-dependencies]
rand = "0.4"

[package.metadata.docs.rs]
all-features = true
