[package]
name = "base16"
version = "0.2.1"
rust-version = "1.60.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
keywords = ["hex", "base16", "encode", "decode", "no_std"]
repository = "https://github.com/thomcc/rust-base16"
description = "base16 (hex) encoding and decoding"
categories = ["encoding", "no-std"]
license = "MIT OR Apache-2.0 OR Unlicense"
readme = "README.md"
edition = "2021"

[features]
std = ["alloc"]
alloc = []
default = ["alloc"]

[dependencies]

[dev-dependencies]
rand = "0.8.5"
divan = "0.1.14"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true
